--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "private": true,
   "scripts": {
     "install:all": "npm install --prefix frontend && npm install --prefix backend",
-    "start": "concurrently \"npm start --prefix backend\" \"npm run dev --prefix frontend\"",
-    "build": "npm run build --prefix frontend",
-    "deploy": "npm run build && vercel deploy"
+    "start": "concurrently \"npm start --prefix backend\" \"npm run dev --prefix frontend\""
+    
   },
   "dependencies": {
     "concurrently": "^8.0.1"
